Sat Dec  5 14:43:00 EST 2009	JK Lowden <jklowden@freetds.org>
	* src/apps/tsql.c applied small optind patch from ML

Fri Dec  4 11:34:10 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/getdata.c:
	- check buffer unchanged if overflow detected

Wed Dec  2 17:56:52 EST 2009	JK Lowden <jklowden@freetds.org>
	* src/dblib/dblib.c src/odbc/prepare_query.c src/tds/login.c
	- warning & uninitialized variable cleanup

Wed Dec  2 17:30:10 EST 2009	JK Lowden <jklowden@freetds.org>
	* include/sqldb.h add Microsoft db-lib error symbols
	* src/dblib/dblib.c 
	- dbsqlok returns FAIL if error encountered in any DONEINPROC
	- packet prior to returning.  Should return FAIL for
	- RAISERROR('msg', 16,1).

Sun Nov 29 21:16:19 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/getdata.c:
	- Check error if conversion truncates data

Sun Nov 29 21:06:18 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/data.c: Fix MS ODBC problem during test

Sun Nov 29 20:02:37 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/data.c: Test univarchar from server

Sun Nov 29 19:56:38 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: Fix row number return for cursors

Fri Nov 27 19:01:33 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc_util.c src/odbc/unittests/describecol.in:
	- Fix SQL_GUID length

Fri Nov 27 17:15:36 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/getdata.c:
	- Fix SQLGetData from fixed to CHAR not returning always
	  SQL_SUCCESS

Thu Nov 26 10:46:01 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/ctlib.h include/tds.h src/ctlib/ct.c src/tds/config.c:
	* src/tds/login.c src/tds/mem.c:
	- Move server_addr into ctlib

Thu Nov 26 10:06:51 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/data.c src/tds/tds_checks.c:
	* src/tds/tds_checks.h src/tds/token.c: