@@ -1,3 +1,8 @@
+Mon Dec  7 17:22:05 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/unittests/getdata.c src/tds/convert.c:
+	- Ported test for conversion from '' text to SQL_C_BINARY, remove
+	  possible core
+
 Sat Dec  5 14:43:00 EST 2009	JK Lowden <jklowden@freetds.org>
 	* src/apps/tsql.c applied small optind patch from ML
 
@@ -1957,4 +1962,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.2899 2009-12-05 20:25:31 jklowden Exp $
+$Id: ChangeLog,v 1.2900 2009-12-07 16:22:12 freddy77 Exp $
